# dgi

./: .gitignore  dgi.sln  dgibuild_dbg_win7.cmd  dgibuild_dbg_wxp.cmd  dgibuild_rls_win7.cmd  dgibuild_rls_wxp.cmd  dgilicense.html  dgiver.ver
dgicrash/: Temp.cpp  dgicrash.cpp  dgicrash.rc  dgicrash.vcxproj  dgicrash.vcxproj.filters  example.cpp  sources
dgidebug/: dgidebug.cpp  dgidebug.rc  dgidebug.vcxproj  dgidebug.vcxproj.filters  sources
dgidevcon/: cmds.cpp  msg.mc  statusex.txt
dgidevcon/objchk_win7_x86/i386/: _objects.mac  devcon.res  msg.h
dgiminidump/: dgiminidump.cpp  dgiminidump.h  dgiminidump.rc  dgiminidump.vcxproj  dgiminidump.vcxproj.filters  sources
dgiminidump/i386/: dgiminidump.lib
dgiminidump/objchk_win7_x86/i386/: dgiminidump.obj.oacr.wdksamples.x86chk.pft.xml
dgirndpwdgen/: .gitignore  CMakeLists.txt  README.md  dgirndpwdgen.cpp  dgirndpwdgen.cpp11  dgirndpwdgen.h  dgirndpwdgen.h.in  dgirndpwdgen.rc  dgirndpwdgen.vcxproj  dgirndpwdgen.vcxproj.filters  sources
dgisysst/: dgisysst.cpp  dgisysst.h  dgisysst.rc  sources
dgitracer/: dgitracer.cpp  dgitracer.h  dgitracer.rc  dgitracer.vcxproj  dgitracer.vcxproj.filters  dgitracera.cpp  dgitracerw.cpp  sources
dgitracer/i386/: dgitracer.lib
dgitracer/objchk_win7_x86/i386/: dgitracera.obj.oacr.wdksamples.x86chk.pft.xml  dgitracerw.obj.oacr.wdksamples.x86chk.pft.xml
dgiutil/: dgiatomic.h  dgidefines.h  dgiqueue.h  dgispinlock.h  dgiunits.h
